<resources>
    <string name="app_name">SIPAMINAL</string>
    <string name="DATA">PERSONEL</string>
    <string name="LP">LP</string>
    <string name="LHP">LHP</string>
    <string name="GELAR">GELAR</string>
    <string name="login">Login</string>
    <string name="save">Simpan</string>
    <string name="error">Error</string>
    <string name="error_conn">Error Koneksi</string>
    <string name="not_save">Gagal Simpan</string>
    <string name="not_update">Gagal Update</string>
    <string name="next">Selanjutnya</string>
    <string name="delete">Hapus</string>
    <string name="insert_name">Nama</string>
    <string name="insert_ttl">Tempat Tinggal Lahir</string>
    <string name="action_ok">OK</string>
    <string name="action_cancel">CANCEL</string>
    <string name="data_saved">Data Berhasil Disimpan</string>
    <string name="data_updated">Data Berhasil Diupdate</string>
    <string name="data_deleted">Data Berhasil Dihapus</string>

    <string name="image_picker_provider_authority_suffix">.imagepicker.provider</string>

    <string name="message_user_unautorizhed">You already login into another device</string>
    <string name="msg_unexpected_error">Cannot proced your request, please try again later</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tambah">Tambah</string>
    <string name="keterangan_optional">Keterangan(Optional)</string>
    <string name="nama_pekerjaan_jabatan">Nama Pekerjaan / Jabatan</string>
    <string name="pekerjaan">Pekerjaan</string>
    <string name="pangkat">Pangkat</string>
    <string name="kesatuan">Kesatuan</string>
    <string name="tahun_lamanya">Tahun Lamanya</string>
    <string name="tahun_awal">Tahun Awal</string>
    <string name="tahun_akhir">Tahun Akhir</string>
    <string name="tanggal">Tanggal(TGL-BLN-THN)</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="nama_alias">Nama Alias(Optional)</string>
    <string name="jk">Jenis Kelamin</string>
    <string name="suku_ras">Suku / Ras</string>
    <string name="nrp">NRP</string>
    <string name="kewarganegaraan">Kewarganegaraan</string>
    <string name="how_to_kewarganegaraan">Cara Memperoleh Kewarganegaraan</string>
    <string name="agama_sekarang">Agama Sekarang</string>
    <string name="agama_sebelumnya">Agama Sebelumnya</string>
    <string name="status_kawin">Status Kawin</string>
    <string name="selesai">Selesai</string>
    <string name="umum">Umum</string>
    <string name="kop">KEPOLISIAN NEGARA REPUBLIK INDONESIA DAERAH KALIMANTAN SELATAN \n BIDANG PROPAM</string>
    <string name="hapus_data">Hapus Data</string>
    <string name="catatan_personel">Catatan Personel</string>
    <string name="jenis_pelanggaran">Jenis Pelanggaran</string>
    <string name="detail">Detail</string>
    <string name="tanggal_ditahan">Tanggal Ditahan</string>
    <string name="tempat_ditahan">Tempat Ditahan</string>
    <string name="tanggal_dihukum">Tanggal Dihukum</string>
    <string name="tempat_dihukum">Tempat Dihukum</string>
    <string name="paragraf">lorem ipsum dolor lorem ipsum dolorlorem ipsum dolorlorem ipsum dolorlorem ipsum dolorlorem ipsum dolorlorem ipsum dolorlorem ipsum dolorlorem ipsum dolorlorem ipsum dolorlorem ipsum dolorlorem ipsum dolorlorem ipsum dolorlorem ipsum dolorlorem ipsum dolorlorem ipsum dolorlorem ipsum dolorlorem ipsum dolorlorem ipsum dolorlorem ipsum dolorlorem ipsum dolorlorem ipsum dolor</string>
    <string name="edit_data">Edit Data</string>
    <string name="generate_dokumen">Generate Dokumen</string>
    <string name="download">Download</string>
    <string name="success_generate_doc">Berhasil Generate Dokumen</string>
    <string name="failed_generate_doc">Gagal Generate Dokumen</string>
    <string name="iya">Iya</string>
    <string name="tidak">Tidak</string>
    <string name="memiliki">Memiliki</string>
    <string name="polsek">Polsek</string>
    <string name="polres">Polres</string>
    <string name="polda">Polda</string>
    <string name="success_change_pass">Berhasil Ubah Password</string>
    <string name="back">Kembali</string>
    <string name="failed_login">Gagal Login</string>
    <string name="failed_deleted">Error Koneksi / Lakukan Beberapa Saat</string>
    <string name="add_data_saksi">Tambah Data Saksi</string>
    <string name="used_on_references_lp">Data Tidak Bisa Dihapus Karena Digunakan Sebagai Referensi</string>
    <string name="success_download_doc">Berhasil Download Berkas</string>


    <string-array name="satker">
        <item>"POLRESTA BANJARMASIN"</item>
        <item>"POLRES BANJARBARU"</item>
        <item>"POLRES BANJAR"</item>
        <item>"POLRES TAPIN"</item>
        <item>"POLRES HULU SUNGAI SELATAN"</item>
        <item>"POLRES HULU SUNGAI TENGAH"</item>
        <item>"POLRES HULU SUNGAI UTARA"</item>
        <item>"POLRES BALANGAN"</item>
        <item>"POLRES TABALONG"</item>
        <item>"POLRES TANAH LAUT"</item>
        <item>"POLRES TANAH BUMBU"</item>
        <item>"POLRES KOTABARU"</item>
        <item>"POLRES BATOLA"</item>
        <item>"SAT BRIMOB"</item>
        <item>"SAT POLAIR"</item>
        <item>"SPN BANJARBARU"</item>
        <item>"POLDA KALSEL"</item>
        <item>"SARPRAS"</item>
    </string-array>

    <string-array name="month">
        <item>"Januari"</item>
        <item>"Februari"</item>
        <item>"Maret"</item>
        <item>"April"</item>
        <item>"Mei"</item>
        <item>"Juni"</item>
        <item>"Juli"</item>
        <item>"Agustus"</item>
        <item>"September"</item>
        <item>"Oktober"</item>
        <item>"November"</item>
        <item>"Desember"</item>
    </string-array>
</resources>