<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.main.skhd.tinddisiplin.DetailTindDisiplinActivity">

    <include layout="@layout/layout_toolbar_white" />

    <include layout="@layout/view_separator" />

    <TextView
        style="@style/TitleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Personel" />

    <TextView
        android:id="@+id/txt_nama_personel_tind_disiplin_detail"
        style="@style/JustText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nama_lengkap" />

    <TextView
        android:id="@+id/txt_pangkat_personel_tind_disiplin_detail"
        style="@style/JustText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pangkat" />

    <TextView
        android:id="@+id/txt_nrp_personel_tind_disiplin_detail"
        style="@style/JustText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nrp" />

    <TextView
        android:id="@+id/txt_jabatan_personel_tind_disiplin_detail"
        style="@style/JustText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Jabatan" />
    <TextView
        android:id="@+id/txt_kesatuan_personel_tind_disiplin_detail"
        style="@style/JustText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kesatuan" />

    <include layout="@layout/line_separator" />

    <TextView
        style="@style/TitleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Tindakan Disiplin" />

    <TextView
        android:id="@+id/txt_tindakan_detail"
        style="@style/JustText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Tindakan Disiplin" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_edit_tind_disiplin"
        style="@style/Widget.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_8dp"
        android:text="Edit Data" />
</LinearLayout>