<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.main.editpersonel.pekerjaan.EditPekerjaanFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_pekerjaan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space_12dp"
            android:layout_marginTop="@dimen/space_8dp"
            android:text="Edit Pekerjaan"
            android:textSize="@dimen/text_18"
            android:textStyle="bold" />


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space_12dp"
            android:layout_marginTop="@dimen/space_8dp"
            android:hint="@string/nama_pekerjaan_jabatan">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_nama_pekerjaan_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space_12dp"
            android:layout_marginTop="@dimen/space_8dp"
            android:hint="@string/pangkat">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_pangkat_pekerjaan_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space_12dp"
            android:layout_marginTop="@dimen/space_8dp"
            android:hint="@string/kesatuan">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_kesatuan_pekerjaan_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:suffixText="Tahun"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space_12dp"
            android:layout_marginTop="@dimen/space_8dp"
            android:hint="@string/tahun_lamanya">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_lama_thn_pekerjaan_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginHorizontal="@dimen/space_12dp"
            android:layout_marginTop="@dimen/space_8dp"
            android:hint="@string/keterangan_optional">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_ket_pekerjaan_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textMultiLine" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_save_edit_pekerjaan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space_12dp"
            android:layout_marginTop="@dimen/space_8dp"
            android:text="@string/save" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_delete_edit_pekerjaan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            app:backgroundTint="@color/white"
            android:textColor="@color/colorPrimary"
            android:layout_marginHorizontal="@dimen/space_12dp"
            android:layout_marginTop="@dimen/space_8dp"
            android:text="@string/delete" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="@dimen/space_8dp"
            android:background="@color/grey" />

    </LinearLayout>

</FrameLayout>