<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txt_pekerjaan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space_12dp"
            android:layout_marginTop="@dimen/space_8dp"
            android:text="Pekerjaan"
            android:textSize="@dimen/text_18"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/btn_delete_pekerjaan_custom"
            android:layout_width="@dimen/space_32dp"
            android:layout_height="@dimen/space_32dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="@dimen/space_8dp"
            android:layout_marginEnd="@dimen/space_12dp"
            android:src="@drawable/ic_delete"
            app:tint="@color/colorPrimary" />
    </RelativeLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/space_12dp"
        android:layout_marginTop="@dimen/space_8dp"
        android:hint="@string/nama_pekerjaan_jabatan">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_nama_pekerjaan_custom"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text|textCapSentences" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/space_12dp"
        android:layout_marginTop="@dimen/space_8dp"
        android:hint="@string/pangkat">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_pangkat_pekerjaan_custom"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textCapCharacters" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/space_12dp"
        android:layout_marginTop="@dimen/space_8dp"
        android:hint="@string/kesatuan">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_kesatuan_pekerjaan_custom"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textCapCharacters" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/space_12dp"
        android:layout_marginTop="@dimen/space_8dp"
        android:hint="@string/tahun_lamanya"
        app:suffixText="Tahun">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_lama_thn_pekerjaan_custom"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginHorizontal="@dimen/space_12dp"
        android:layout_marginTop="@dimen/space_8dp"
        android:hint="@string/keterangan_optional">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_ket_pekerjaan_custom"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textMultiLine|textCapSentences" />

    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="@dimen/space_8dp"
        android:background="@color/grey" />

</LinearLayout>