<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".ui.main.editpersonel.alamat.EditAlamatActivity">

    <include layout="@layout/layout_toolbar_white"/>
    <include layout="@layout/view_separator"/>

    <TextView
        android:id="@+id/txt_pekerjaan_luar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/space_12dp"
        android:layout_marginTop="@dimen/space_8dp"
        android:text="Edit Alamat"
        android:textSize="@dimen/text_18"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/space_8dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/space_12dp"
        android:hint="Alamat">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_alamat_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textMultiLine" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/space_12dp"
        android:layout_marginTop="@dimen/space_8dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout4"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/space_12dp"
            android:layout_weight="1"
            android:hint="@string/tahun_awal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_thn_awal_alamat_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:inputType="number"
                android:maxLength="4" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout3"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/tahun_akhir"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_thn_akhir_alamat_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:inputType="number"
                android:maxLength="4" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>


    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/space_12dp"
        android:layout_marginTop="@dimen/space_8dp"
        android:hint="Rangka">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_rangka_alamat_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textMultiLine" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginHorizontal="@dimen/space_12dp"
        android:layout_marginTop="@dimen/space_8dp"
        android:hint="@string/keterangan_optional">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_ket_alamat_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textMultiLine" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_save_alamat_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/space_12dp"
        android:layout_marginTop="@dimen/space_8dp"
        android:text="@string/save" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_delete_alamat_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        app:backgroundTint="@color/white"
        android:textColor="@color/colorPrimary"
        android:layout_marginHorizontal="@dimen/space_12dp"
        android:layout_marginTop="@dimen/space_8dp"
        android:text="@string/delete" />

</LinearLayout>